--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11532,3 +11532,145 @@ default "";
 "~^/doc/darknet-market/alphabay/20170128-alphabay.tar.xz.*$" "/doc/darknet-market/alphabay/2017-01-28-alphabay.tar.xz";
 "~^/doc/anime/eva/rebuild/2/2010-crc/1QS4P.jpg.*$" "/doc/anime/eva/rebuild/2/2010-crc/storyboard-1qs4p.jpg";
 "~^/doc/traffic/20102017-gwern-traffic-autocorrelation.png.*$" "/doc/traffic/2010-2017-gwern-traffic-autocorrelation.png";
+"~^/doc/cat/psychology/drug/catnip/1983-bicchi.pdf.*$" "/doc/cat/psychology/drug/valerian/1983-bicchi.pdf";
+"~^/doc/economics/1966-leibenstein.pdf.*$" "/doc/economics/experience-curve/1966-leibenstein.pdf";
+"~^/static/font/dropcap/gene-wolfe/dark/F-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-01.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-01.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/F-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/F-dark-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/T-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/T-dark-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/dark/V-dark-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-01.png$" "/static/font/dropcap/gene-wolfe/light/F-light-01.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-04.png$" "/static/font/dropcap/gene-wolfe/light/F-light-04.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/F-light-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-06.png$" "/static/font/dropcap/gene-wolfe/light/F-light-06.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-06.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-06.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-07.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-07.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-08.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-08.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-09.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-09.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-10.png$" "/static/font/dropcap/gene-wolfe/light/F-light-10.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-10.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-10.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-11.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-11.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-12.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-12.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-13.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-13.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-14.png$" "/static/font/dropcap/gene-wolfe/light/F-light-14.png";
+"~^/static/font/dropcap/gene-wolfe/light/F-14.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-14.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-15.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-15.svg";
+"~^/static/font/dropcap/gene-wolfe/light/F-16.svg$" "/static/font/dropcap/gene-wolfe/light/F-light-16.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/T-light-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/T-06.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-06.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-07.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-07.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-08.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-08.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-10.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-10.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-11.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-11.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-12.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-12.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-13.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-13.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-14.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-14.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-16.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-16.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-17.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-17.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-18.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-18.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-19.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-19.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-20.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-20.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-21.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-21.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-22.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-22.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-23.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-23.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-24.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-24.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-25.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-25.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-26.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-26.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-01-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-01-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-01-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-01-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-02-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-02-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-02-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-02-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-03-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-03-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-03-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-03-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-04-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-04-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-04-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-04-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-05-small-1x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-05-small-1x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-05-small-2x.png$" "/static/font/dropcap/gene-wolfe/light/V-light-05-small-2x.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-06.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-06.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-07.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-07.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-08.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-08.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-09.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-09.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-10.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-10.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-11.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-11.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-12.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-12.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-13.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-13.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-14.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-14.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-15.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-15.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-16.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-16.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-17.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-17.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-19.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-19.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-20.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-20.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-21.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-21.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-22.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-22.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-23.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-23.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-24.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-24.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-25.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-25.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-26.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-26.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-27.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-27.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-28.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-28.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-29.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-29.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-30.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-30.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-31.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-31.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-32.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-32.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-33.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-33.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-34.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-34.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-35.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-35.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-36.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-36.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-37.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-37.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-38.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-38.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-39.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-39.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-40.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-40.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-41.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-41.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-42.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-42.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-43.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-43.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-44.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-44.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-45.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-45.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-46.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-46.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-47.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-47.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-48.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-48.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-49.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-49.svg";
+"~^/static/font/dropcap/gene-wolfe/light/V-50.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-50.svg";
