+; finally squashed the endles %5C for good after all the Claude solutions oddly failed and I went hunting for a real answer (turned out to be a triple-backslash, bizarrely)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -137,6 +137,7 @@ server {
         rewrite ^(?<original>.*)\?ref.*$ /$original permanent;
         rewrite ^(?<original>.*)\?code.*$ /$original permanent;
         rewrite ^(?<original>.*)\?backlink.*$ /$original permanent;
+        rewrite ^(?<original>.*)\!$ /$original permanent;
 
         rewrite ^(?<original>.*)ç$ /$original permanent;
         rewrite ^/docs/(?<old>.*)$ /doc/$old permanent;
@@ -394,8 +395,11 @@ server {
         # rewrite ^/(?<original>.*)\%[0-9]D.*$ /$original permanent;
         # rewrite ^/(?<original>.*)\%[0-9]F.*$ /$original permanent;
         # rewrite ^/(?<original>.*)\%5D$ /$original permanent;
-        rewrite ^/(?<original>.*)\%5C.*$ /$original permanent;
-        rewrite ^/(?<original>.*)%5C.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\[Aa]cessed$ /$original permanent;
+        # rewrite ^/(?<original>.*)\%5C.*$ /$original permanent;
+        # rewrite ^/(?<original>.*)%5C.*$ /$original permanent;
+        # rewrite ^/(?<original>.*)\\$ /$original permanent;
+        # rewrite "^(?<original>.*?)[\\%5C]+$" $scheme://$host$original permanent;
         rewrite ^/(?<original>.*)\|$ /$original permanent;
         rewrite ^/\/(?<original>.*)$ /$original permanent;
         rewrite ^/\/\/(?<original>.*)$ /$original permanent;
@@ -1012,6 +1016,16 @@ server {
         ## when browsing files like `/doc/foo/2024-bar.pdf`, any experienced web user might try to browse by going to the index `/doc/foo/index.html`, but we actually put them at `/doc/foo/index`; instead of trying to create thousands of redirects for every possible error, we tell nginx to check for the /index file existing and if it does, load that instead
         try_files $uri $uri/ @fallback;
      }
+
+     # backslashed URL requests like 'https://gwern.net/dnb-faq%5C' are always broken, but also very hard to match normally, for some reason, and so result in a huge number of spurious errors. Try to catch them all here.
+     # (Why are there so many? My guess is this is downstream of bad code, where the authors failed to correctly escape the escaping characters and so wind up spamming backslashes everywhere.)
+     # NOTE: the triple-backslash is not an error. That is in fact how you match a single '\' literal, due to Lua being involved: <https://stackoverflow.com/questions/27189195/nginx-rewrite-backslashes-to-forward-slashes/27267428#27267428>. This is hard to find out because '\\' and '\' and '\\\\' all just fail silently or cause subtle bugs.
+     if ($uri ~ "^(?<original>.*?)\\\$") {
+        return 301 $scheme://$host$original;
+    }
+     # if ($request_uri ~ "^(?<original>.*?)[\\%5C]+$") {
+     #    return 301 $scheme://$host$original;
+     # }
 
      # Enable redirection? TODO: I don't understand why this seems to be necessary in addition to `map`
      if ($new_uri != "" ) {
