MetadataFormat: clean up by splitting out more author-related routines to MetadataAuthor

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18194,6 +18194,46 @@
 "~^/static/images/logo.png$" "/static/img/logo/logo.png";
 "~^/zeo/Potassium-morning-use$" "/zeo/potassium#morning-use";
 "~^/book-writing/.*$" "/book-writing";
+"~^/[a-z-]+/rss$" "/rss"; # eg '/treadmill/rss'
+"~^/[a-z-]+/feed$" "/rss"; # eg '/tool-ai/feed'
+"~^/[a-z-]+/[a-z-]+/rss$" "/rss"; # eg '/note/tbi/rss'
+"~^/[a-z-]+/[a-z-]+/feed$" "/rss"; # eg '/newsletter/2020/feed'
+"~^/[a-z-]+/[a-z-]+/[a-z-]+/rss$" "/rss"; # eg '/doc/newest/foo/rss'
+"~^/[a-z-]+/[a-z-]+/[a-z-]+/feed$" "/rss";
+"~^/.*/node\?_format=hal_json$" "/static/404";
+"~^/.*/evil.php$" "/static/404";
+"~^/doc/sites/default/files/69.php$" "/static/404";
+"~^/doc/economics/1975-gilovich\.pdf.*$" "/doc/economics/index";
+"~^//statics/images/admin_img/.*$" "/static/404";
+"~^/invertornot/rss/effect/js/transform.js$" "https://invertornot.com";
+"~^/doc/personal/index.json$" "/doc/personal/index";
+"~^/doc/algernon/1995-rechtscha$" "/doc/algernon/1995-rechtschaffen.pdf";
+"~^//zb_users/.*$" "/static/404";
+"~^//zb_system/.*$" "/static/404";
+"~^/us-southeast-1.linodeobjects.*$" "/static/404";
+"~^/suratlamarankerja.*$" "/static/404";
+"~^/static/font/dropcap/ninit/light/C-16-sciencefiction.png$" "/static/font/dropcap/ninit/light/index";
+"~^/static/font/dropcap/ninit/dark/C-63-scifi.png$" "/static/font/dropcap/ninit/dark/index";
+"~^/static/.*wp-admin.*$" "/static/404";
+"~^/mgm191.store$" "/static/404";
+"~^/highLightTitle.png$" "/static/404";
+"~^/%E2%80%8Bdocs/%E2%80%8Bpsychology/%E2%80%8B2012-bainbridge\.pdf.*$" "/doc/ai/2012-bainbridge.pdf";
+"~^/doc/economics/2009-friedman-seasteadingapra$" "/doc/economics/2009-friedman-seasteadingapracticalguide.pdf";
+"~^/doc/ai/nn/gan/stylegan/anime/assets/css/material-icons.css$" "/static/404";
+"~^/doc/ai/nn/gan/stylegan/anime/assets/css/font-awesome.min.css$" "/static/404";
+"~^/briefing/.*$" "/static/404";
+"~^/dnm$" "/dnm-archive";
+"~^/doc/ai/nn/gan/biggan/2018-11-30-gwern-bigganpytorch-1kcharacters-314000.jpg$" "/doc/ai/nn/gan/biggan/2018-11-30-gwern-bigganpytorch-1kcharacters-314000.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/2/2022-08-02-gwern-dalle2-serialexperimentslainmezzotintprint-thesevendeadlysins.jpg$" "/doc/ai/nn/transformer/gpt/dall-e/2/2022-08-02-gwern-dalle2-serialexperimentslainmezzotintprint-thesevendeadlysins.png";
+"~^/doc/anime/eva/images/notenkimemoirs/blueblazes/11-1.webm$" "/doc/anime/eva/notenki-memoirs/blue-blazes/11-1.webm";
+"~^/doc/genetics/heritable/2009-loethlin\.pdf.*$" "/doc/genetics/heritable/adoption/2021-loehlin.pdf";
+"~^/doc/music-dis$" "/doc/psychology/music/distraction/index";
+"~^/doc/technology/1985-krauss-figure3-californianchildrefrigerationdeathsovertime.jpg$" "/doc/technology/1985-krauss-figure3-californianchildrefrigerationdeathsovertime.png";
+"~^/bg.jpg$" "/static/404";
+"~^/lLLT$" "/lllt";
+"~^/static/font/dropcap/dropcat/dark/B-2-small-1x.png$" "/static/font/dropcap/dropcat/dark/B-dark-2-small-2x.png";
+"~^/static/font/dropcap/ninit/light/C-4-floral.png$" "/static/font/dropcap/ninit/light/index";
+"~^/static/img/logo/logo-whitebg-large-border.pngUR$" "/static/img/logo/logo-whitebg-large-border.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
