--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18136,7 +18136,7 @@
 "~^/doc/ai/nn/fully-connected/1986-rumelhart$" "/doc/ai/nn/fully-connected/1986-rumelhart.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/2023-11-04-gwern-midjourneyv5-perishedparadise-johnmartinstyle-satanexpelledfromheaven-prompttestsamples.png$" "/doc/ai/nn/diffusion/midjourney/2023-11-04-gwern-midjourneyv5-perishedparadise-johnmartinstyle-satanexpelledfromheaven-prompttestsamples.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/2023-10-19-gwern-midjourneyv5-wsjstipplehatchportrait-failure.png$" "/doc/ai/nn/diffusion/midjourney/2023-10-19-gwern-midjourneyv5-wsjstipplehatchportrait-failure.jpg";
-"~^/differences.+$" "";
+"~^/differences.+$" "/difference";
 "~^/differences/.*$" "/difference";
 "~^/Danbooru2020Accessed.*$" "/danbooru202";
 "~^/fb$" "/facebook";
@@ -18292,6 +18292,8 @@
 "~^/eva/$" "/doc/anime/eva/index";
 "~^/team$" "/review/tea";
 "~^/doc/www/www.esquire.com/27d49d1b7cdb6628bfbce1813bb598bbd64e153f.html/favicon.ico$" "https://www.esquire.com/favicon.ico";
+"~^/static/template/pandoc/\$css.*$" "/static/404";
+"~^/static/\{$.*$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
