refactor Metadata*.hs files to Metadata/*.hs; split out a Metadata/Date too

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11674,3 +11674,10 @@ default "";
 "~^/static/font/dropcap/gene-wolfe/light/V-48.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-48.svg";
 "~^/static/font/dropcap/gene-wolfe/light/V-49.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-49.svg";
 "~^/static/font/dropcap/gene-wolfe/light/V-50.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-50.svg";
+"~^/doc/statistics/probability/2024-09-05-gwern-meme-butitcouldworkforus-regressiontothemean.png.*$" "/doc/statistics/probability/2024-09-05-gwern-meme-butitcouldworkforus-regressiontothemean.jpg";
+"~^/static/build/MetadataAuthor.hs$" "/static/build/Metadata/Author.hs";
+"~^/static/build/MetadataFormat.hs$" "/static/build/Metadata/Format.hs";
+"~^/static/build/MetadataTitle.hs $" "/static/build/Metadata/Title.hs";
+"~^/static/build/Config/MetadataAuthor.hs$" "/static/build/Config/Metadata/Author.hs";
+"~^/static/build/Config/MetadataFormat.hs$" "/static/build/Config/Metadata/Format.hs";
+"~^/static/build/Config/MetadataTitle.hs$" "/static/build/Config/Metadata/Title.hs";
