--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1001,6 +1001,7 @@ server {
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
+        rewrite ^//(?<original>.+)$ /$original permanent;
 
         # Gitit dot-page → Markdown .md migration:
         rewrite /(?<original>.*)\.page$ /$original.md permanent;
