--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18208,8 +18208,8 @@
 "~^/invertornot/rss/effect/js/transform.js$" "https://invertornot.com";
 "~^/doc/personal/index.json$" "/doc/personal/index";
 "~^/doc/algernon/1995-rechtscha$" "/doc/algernon/1995-rechtschaffen.pdf";
-"~^//zb_users/.*$" "/static/404";
-"~^//zb_system/.*$" "/static/404";
+"~^//zb_users.*$" "/static/404";
+"~^//zb_system.*$" "/static/404";
 "~^/us-southeast-1.linodeobjects.*$" "/static/404";
 "~^/suratlamarankerja.*$" "/static/404";
 "~^/static/font/dropcap/ninit/light/C-16-sciencefiction.png$" "/static/font/dropcap/ninit/light/index";
@@ -18294,6 +18294,17 @@
 "~^/doc/www/www.esquire.com/27d49d1b7cdb6628bfbce1813bb598bbd64e153f.html/favicon.ico$" "https://www.esquire.com/favicon.ico";
 "~^/static/template/pandoc/\$css.*$" "/static/404";
 "~^/static/\{$.*$" "/static/404";
+"~^//$" "/";
+"~^/.*wp-blog\.php.*$" "/static/404";
+"~^/.*shell20211028.*$" "/static/404";
+"~^/.*rindex\.php.*$" "/static/404";
+"~^/.*phpmailer.*$" "/static/404";
+"~^/.*ioxi02\.php.*$" "/static/404";
+"~^/doc/css/index$" "/doc/cs/css/index";
+"~^/pro$" "/problem-14";
+"~^/DNB-FAW$" "/dnb-faq";
+"~^/.*/iR7SzrsOUEP.*$" "/static/404";
+"~^/.*chosen\.php.*$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
