--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18305,6 +18305,7 @@
 "~^/DNB-FAW$" "/dnb-faq";
 "~^/.*/iR7SzrsOUEP.*$" "/static/404";
 "~^/.*chosen\.php.*$" "/static/404";
+"~^/doc/economics/1965-whinney.pdf.*$" "/doc/economics/1965-mcwhinney.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
