--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11681,3 +11681,5 @@ default "";
 "~^/static/build/Config/MetadataAuthor.hs$" "/static/build/Config/Metadata/Author.hs";
 "~^/static/build/Config/MetadataFormat.hs$" "/static/build/Config/Metadata/Format.hs";
 "~^/static/build/Config/MetadataTitle.hs$" "/static/build/Config/Metadata/Title.hs";
+"~^/doc/biology/2016-04-01-curetogether-acne.csv.*$" "/doc/genetics/microbiome/acne/2016-04-01-curetogether-acne.csv";
+"~^/doc/nootropic/gwern-qs-acne-curetogether-gaussian-forest.jpg.*$" "/doc/genetics/microbiome/acne/gwern-qs-acne-curetogether-gaussian-forest.jpg";
