--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11683,3 +11683,15 @@ default "";
 "~^/static/build/Config/MetadataTitle.hs$" "/static/build/Config/Metadata/Title.hs";
 "~^/doc/biology/2016-04-01-curetogether-acne.csv.*$" "/doc/genetics/microbiome/acne/2016-04-01-curetogether-acne.csv";
 "~^/doc/nootropic/gwern-qs-acne-curetogether-gaussian-forest.jpg.*$" "/doc/genetics/microbiome/acne/gwern-qs-acne-curetogether-gaussian-forest.jpg";
+"~^/doc/longevity/2002-fda-metforminhydrochloridetablets-prescribinginformation.pdf.*$" "/doc/longevity/metformin/2002-fda-metforminhydrochloridetablets-prescribinginformation.pdf";
+"~^/doc/longevity/2021-scott-figure2-dollarvaluebyyearoflifeformetformintreatmentstartedatage75.jpg.*$" "/doc/longevity/metformin/2021-scott-figure2-dollarvaluebyyearoflifeformetformintreatmentstartedatage75.jpg";
+"~^/doc/longevity/2017-campbell.pdf.*$" "/doc/longevity/metformin/2017-campbell.pdf";
+"~^/doc/longevity/2016-barzilai.pdf.*$" "/doc/longevity/metformin/2016-barzilai.pdf";
+"~^/doc/longevity/2021-lee-2.pdf.*$" "/doc/longevity/metformin/2021-lee-2.pdf";
+"~^/doc/longevity/2011-bulterijs.pdf.*$" "/doc/longevity/metformin/2011-bulterijs.pdf";
+"~^/doc/longevity/2011-lamanna.pdf.*$" "/doc/longevity/metformin/2011-lamanna.pdf";
+"~^/doc/longevity/2012-stevens.pdf.*$" "/doc/longevity/metformin/2012-stevens.pdf";
+"~^/doc/longevity/2014-bannister.pdf.*$" "/doc/longevity/metformin/2014-bannister.pdf";
+"~^/doc/fiction/2013-herdcensus-stateoftheherdreport.pdf.*$" "/doc/anime/my-little-pony/2013-herdcensus-stateoftheherdreport.pdf";
+"~^/doc/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html.*$" "/doc/anime/my-little-pony/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html";
+"~^/doc/psychology/mlp-celestia-tootootaloo-solinvictus.jpg.*$" "/doc/anime/my-little-pony/mlp-celestia-tootootaloo-solinvictus.jpg";
