--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18306,6 +18306,17 @@
 "~^/.*/iR7SzrsOUEP.*$" "/static/404";
 "~^/.*chosen\.php.*$" "/static/404";
 "~^/doc/economics/1965-whinney.pdf.*$" "/doc/economics/1965-mcwhinney.pdf";
+"~^/terrorism-is-not-effective/.*$" "/terrorism-is-not-effective";
+"~^/doc/nootropic/quantified-self/2018-05-17-%C3%83%C2%B0$" "";
+"~^/doc/modafinil/darknet-market/euq.*$" "/doc/modafinil/darknet-market/index";
+"~^/doc/Ii.*$" "/doc/index";
+"~^/doc/ai/nn/transformer/fiction/index$" "/doc/ai/nn/transformer/index";
+"~^/.*1u8je54famrq.*$" "/static/404";
+"~^/2014-spirulina/$" "/2014-spirulina";
+"~^/Death-Note-script/$" "/death-note-script";
+"~^/doc/lesswrong-survey/2013-07$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/secret$" "/static/404";
+"~^/static/font/dropcap/gene-wolfe/light/F-03.png$" "/static/font/dropcap/gene-wolfe/light/F-light-01.png";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
