--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -508,7 +508,7 @@ server {
         rewrite ^/doc/rl/armstrong-controlproblem/ /doc/reinforcement-learning/armstrong-controlproblem/$original permanent;
         rewrite ^/(?<original>doc/.*)/index/index.html /$original/index permanent;
         rewrite ^/(?<original>doc/.*)\.pd/f.$ /$original.pdf permanent;
-        rewrite ^/(?<original>doc/.*)\.pd\\f.*$ /$original.pdf permanent;
+        rewrite ^/(?<original>doc/.*)\.pd\\\f.*$ /$original.pdf permanent;
         rewrite ^/(?<original>doc/.*)-pdf$ /$original.pdf permanent;
         rewrite ^/(?<original>.*)https://www.gwern.net.*$ /$original permanent; # eg. '/CO2-Coinhttps://gwern.net/CO2-Coin'
         rewrite ^/(?<original>.*)\{$ /$original permanent;
@@ -998,6 +998,11 @@ server {
         rewrite ^/(?<old>.*)~$ /$old permanent;
         rewrite ^/(?<old>.*)/guestbook$ /$old/index permanent;
         rewrite ^/doc/music/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
+        rewrite ^/(?<before>.*)/1\*(?<after>.*)$ /$before/$after permanent;
+        rewrite ^/(?<before>.*)\*(?<after>.*)$   /$before$after  permanent;
+        rewrite ^/doc/www/members.madasafish.com/artwork/(?<after>.*)$ http://members.madasafish.com/artwork/$after permanent;
+        rewrite ^/doc/www/members.madasafish.com/Location_Location/(?<after>.*)$ http://members.madasafish.com/Location_Location/$after permanent;
+        rewrite ^/doc/www/members.madasafish.com/map_of-Hogwarts/(?<after>.*)$ http://members.madasafish.com/map_of-Hogwarts/$after permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
