--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -18317,6 +18317,15 @@
 "~^/doc/lesswrong-survey/2013-07$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
 "~^/secret$" "/static/404";
 "~^/static/font/dropcap/gene-wolfe/light/F-03.png$" "/static/font/dropcap/gene-wolfe/light/F-light-01.png";
+"~^/doc/KK2.*$" "/doc/index";
+"~^/doc/statistics/causality/-1.*$" "/doc/statistics/causality/index";
+"~^/me/me$" "/me";
+"~^/max$" "/order-statistic";
+"~^/note/note&amp.*$" "/note/notes";
+"~^/doc/www/pkhungurn.github.io/yashiro_kizuku$" "https://pkhungurn.github.io/yashiro_kizuku";
+"~^/doc/www/pkhungurn.github.io/suzuka_utako$" "https://pkhungurn.github.io/suzuka_utako";
+"~^/doc/www/pkhungurn.github.io/fu_p_l1$" "https://pkhungurn.github.io/fu_p_l1";
+"~^/doc/www/pkhungurn.github.io/eudric$" "https://pkhungurn.github.io/eudric";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/static/404";
@@ -24310,6 +24319,15 @@
 "~^/resetpas.*$" "/static/404";
 "~^/mybdadmin/.*$" "/static/404";
 "~^/dg\.bet.*$" "/static/404";
+"~^/[a-z]+.PhP[0-9].*$" "/static/404";
+"~^////wp-atom.php.*$" "/static/404";
+"~^/muxtw/.*$" "/static/404";
+"~^/.*/t\.sh.*$" "/static/404";
+"~^/Pragathi.*$" "/static/404";
+"~^/ejemp.*$" "/static/404";
+"~^/.*wp-admin/includes/cloud.*$" "/static/404";
+"~^/doc/www/artwork/Fanfic_logo.gif.*$" "/static/404";
+"~^/.*/contentScript.css.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
